@@ -4,6 +4,9 @@
 
 2002-09-09  Jeff Hobbs  <jeffh@ActiveState.com>
 
+	* macosx/tkMacOSXNotify.c (Tk_MacOSXSetupTkNotifier): corrected
+	Mac Jaguar event loop issue.
+
 	* library/tk.tcl: use command instead of control on Aqua bindings.
 	Force dialogs to appear below fixed native Mac menubar.
 	* macosx/tkMacOSXKeyEvent.c:
